# document-barcodes

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish-to-test-pypi.yml  python-package-conda.yml  workflow.yml
data/: ZH Tax Sample - Formular 1.ptax20.pdf.barcodes_combined.yml  ZH Tax Sample - Formular 1.ptax20.pdf.barcodes_raw.yml  ZH Tax Sample - Formular 1.ptax20.pdf.barcodes_raw_jpype.yml  drivers-license new york.jpg.barcodes_raw.yml  drivers-license new york.jpg.barcodes_raw_no_points.yml
data/salary_swissdec/: COMPLEXCompanyMixedSalaries.pdf.barcodes_combined_jpype.yml  COMPLEXCompanyMixedSalaries.pdf.barcodes_raw.yml  COMPLEXCompanyMixedSalaries.pdf.barcodes_raw_jpype.yml
docbarcodes/: cli.py  convertpdf.py  detect.py  extract.py
docbarcodes/zxing/: ex_zxing.py
docbarcodes/zxingjpype/: extract.py  zxingreader.py
src/docbarcodes/: cli.py
src/docbarcodes/zxing/: extract.py
tests/: conftest.py  test_JSON_serializable.py  test_jpeg_driver_license_newyork.py  test_jpype_qrcode.py  test_jpype_swiss_salary_statement.py  test_jpype_swiss_zh_tax_statement.py  test_swiss_salary_statement.py  test_swiss_zh_tax_statement.py
